--- a/Cg5i1.html
+++ b/Cg5i1.html
@@ -1,80 +1,96 @@
-<html>
-<head> 		
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous">
-</script> 		
-<link rel="stylesheet" href="../layout.css"> 		
-</head> 	
-<body> 		
-<div id = "container"> 			
-<div id = "titleBox"> C 프로그래밍 
-</div> 			
-<div id = "navigationBox">
-<ol>
-<li>
-<a href='../Cf1i/Cf1i1.html'>출력
-</a>
-</li>
-<li>
-<a href='../Cf2i/Cf2i1.html'>입력
-</a>
-</li>
-<li>
-<a href='../Cf3i/Cf3i1.html'>변수/연산자
-</a>
-</li>
-<li>
-<a href='../Cf4i/Cf4i1.html'>선택문(삼항연산자/switch)
-</a>
-</li>
-<li>
-<a href='../Cf5i/Cf5i1.html'>선택문(if)
-</a>
-</li>
-<li>
-<a href='../Cf6i/Cf6i1.html'>반복문(while)
-</a>
-</li>
-<li>
-<a href='../Cf7i/Cf7i1.html'>반복문(for)
-</a>
-</li>
-<li>
-<a href='../Cf8i/Cf8i1.html'>배열
-</a>
-</li>
-<li>
-<a href='../Cf9i/Cf9i1.html'>문자열
-</a>
-</li>
-<li>
-<a href='../Cg0i/Cg0i1.html'>함수
-</a>
-</li>
-<li>
-<a href='../Cg1i/Cg1i1.html'>포인터
-</a>
-</li>
-<li>
-<a href='../Cg2i/Cg2i1.html'>파일입출력
-</a>
-</li>
-<li>
-<a href='../Cg3i/Cg3i1.html'>구조체/열거형/동적할당
-</a>
-</li>
-<li>
-<a href='../Cg4i/Cg4i1.html'>함수자료전달
-</a>
-</li>
-<li>
-<a href='../Cg5i/Cg5i1.html'>전처리기/파일분할
-</a>
-</li>
-</ol>
-</div>  			
-<div id = "contentBox"> 			
-	준비중입니다 
-</div> 	
-</body> 
-</html> 
+<html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script type="text/javascript" src="../functions.js"></script> 		<script type="text/javascript" src="../Js0C1f/C1501.js"></script> 	</head> 	<body onload='sP3f1();' onkeydown='sP3f4()' oncontextmenu="return false" onselectstart="return false" oncopy="return false" oncut="return false" onpaste="return false" draggable="false" ondragstart="return false" ondrop="return false"> 		<div id = "container"> 			<div id = "titleBox"> C 프로그래밍 </div> 			<div id = "navigationBox"><ol><li><a href='../Cf1i/Cf1i1.html'>출력</a></li><li><a href='../Cf2i/Cf2i1.html'>입력</a></li><li><a href='../Cf3i/Cf3i1.html'>변수/연산자</a></li><li><a href='../Cf4i/Cf4i1.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Cf5i/Cf5i1.html'>선택문(if)</a></li><li><a href='../Cf6i/Cf6i1.html'>반복문(while)</a></li><li><a href='../Cf7i/Cf7i1.html'>반복문(for)</a></li><li><a href='../Cf8i/Cf8i1.html'>배열</a></li><li><a href='../Cf9i/Cf9i1.html'>문자열</a></li><li><a href='../Cg0i/Cg0i1.html'>함수</a></li><li><a href='../Cg1i/Cg1i1.html'>포인터</a></li><li><a href='../Cg2i/Cg2i1.html'>파일입출력</a></li><li><a href='../Cg3i/Cg3i1.html'>열거형/구조체/동적할당</a></li><li><a href='../Cg4i/Cg4i1.html'>함수자료전달</a></li><li><a href='../Cg5i/Cg5i1.html'>전처리기/파일분할</a></li><ul><li><a href='../Cg5i/Cg5i1.html'>캐릭터 한 칸 이동</a></li><ul><li><a href='Cg5i1.html'>코드읽기</a></li><li><a href='Cg5i1a.html'>알고리즘</a></li><li><a href='Cg5i1k.html'>키워드</a></li><li><a href='Cg5i1b.html'>빈칸채우기</a></li><li><a href='Cg5i1s.html'>실행순서</a></li><li><a href='Cg5i1m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/C/blob/main/Chapter15/Direction.c' target='code'>소스코드</a></li></ul><li><a href='../Cg5i/Cg5i2.html'>가위바위보</a></li><li><a href='../Cg5i/Cg5i3.html'>원둘레 원면적</a></li><li><a href='../Cg5i/Cg5i4.html'>구슬 찾기</a></li><li><a href='../Cg5i/Cg5i5.html'>캐릭터 이동</a></li></ul></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>캐릭터가 한 칸 이동해서 방패([), 칼(/), 창(->), 출구(문) 중 하나를 선택하는 문제입니다 이를 해결하는 다음 프로그램을 해석하세요 </pre> 				<pre class='selectable'>      / 
+  [   옷   문
+      -> 
+WASD와 [Enter]를 입력하세요: <b><font color='red'>a</font></b>
+      / 
+ 옷]       문
+      ->
+</pre><br><pre class='selectable'>      / 
+  [   옷   문
+      -> 
+WASD와 [Enter]를 입력하세요: <b><font color='red'>W</font></b>
+      옷/ 
+  [   옷   문
+      ->
+</pre><br><pre class='selectable'>      / 
+  [   옷   문
+      -> 
+WASD와 [Enter]를 입력하세요: <b><font color='red'>s</font></b>
+      / 
+  [        문
+      옷->
+</pre><br> 	  				<h4>알고리즘</h4> 				<pre style='white-space:normal;'>프로그램시작 <br>&nbsp; &nbsp;캐릭터의 초기 위치를 출력 <br>&nbsp; &nbsp;이동 방향 입력 받기 <br>&nbsp; &nbsp;이동 결과 출력 <br>&nbsp; &nbsp;&nbsp; &nbsp;W는 위로 이동 <br>&nbsp; &nbsp;&nbsp; &nbsp;A는 왼쪽으로 이동 <br>&nbsp; &nbsp;&nbsp; &nbsp;S는 아래로 이동 <br>&nbsp; &nbsp;&nbsp; &nbsp;D는 오른쪽으로 이동 <br>프로그램 종료 <br></pre> 		 				<br><h4>프로그램 코드 <input id='btn' type='button' value='실행순서 및 메모리상태 확인' onclick='sP3f5();'/></h4>  				<div id = "codeBox"><pre id="code0" class="unselectable codeClass">	<font color="green">// 파일명 : ./Chapter15/Direction.c</font>
+</pre><pre id="code0" class="unselectable codeClass">	#include &lt;stdio.h&gt;
+</pre><pre id="code0" class="unselectable codeClass">	 
+</pre><pre id="code0" class="unselectable codeClass">	<font color="green">// 방향 매크로 상수 정의</font>
+</pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="매크로 이름을 대체 문자열로 치환할 수 있도록 정의">define</font> up 'w'
+</pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="매크로 이름을 대체 문자열로 치환할 수 있도록 정의">define</font> UP 'W'
+</pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="매크로 이름을 대체 문자열로 치환할 수 있도록 정의">define</font> down 's'
+</pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="매크로 이름을 대체 문자열로 치환할 수 있도록 정의">define</font> DOWN 'S'
+</pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="매크로 이름을 대체 문자열로 치환할 수 있도록 정의">define</font> left 'a'
+</pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="매크로 이름을 대체 문자열로 치환할 수 있도록 정의">define</font> LEFT 'A'
+</pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="매크로 이름을 대체 문자열로 치환할 수 있도록 정의">define</font> right 'd'
+</pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="매크로 이름을 대체 문자열로 치환할 수 있도록 정의">define</font> RIGHT 'D'
+</pre><pre id="code0" class="unselectable codeClass">	 
+</pre><pre id="code0" class="unselectable codeClass">	<font color="green">//<b> 프로그램시작 </b></font>
+</pre>
+<pre id="code1" class="unselectable codeClass">1	<font color='red' title="-2, -1, 0, 1, 2 등의 정수 자료형">int</font> main() {
+</pre>
+<pre id="code2" class="unselectable codeClass">2		char direction = UP;
+</pre><pre id="code0" class="unselectable codeClass">	 
+</pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> 캐릭터의 초기 위치를 출력 </b></font>
+</pre>
+<pre id="code3" class="unselectable codeClass">3		printf("      / \n");
+</pre>
+<pre id="code4" class="unselectable codeClass">4		printf("  [   옷   문\n");
+</pre>
+<pre id="code5" class="unselectable codeClass">5		printf("      -> \n\n");
+</pre><pre id="code0" class="unselectable codeClass">		 
+</pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> 이동 방향 입력 받기 </b></font>
+</pre>
+<pre id="code6" class="unselectable codeClass">6		printf("방향키(WASD)와 [Enter]를 입력하세요: " );
+</pre>
+<pre id="code7" class="unselectable codeClass">7		scanf("%c",&direction);
+</pre><pre id="code0" class="unselectable codeClass">	 
+</pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> 이동 결과 출력 </b></font>
+</pre>
+<pre id="code8" class="unselectable codeClass">8		printf(" <font color='red' title="출력 설정 이스케이프 문자">\033</font>[2;6f  ");
+</pre>
+<pre id="code9" class="unselectable codeClass">9		<font color='red' title="정수형 변수가 특정 정수값이면 해당 명령문을 실행하는 선택문">switch</font>( direction ) {
+</pre><pre id="code0" class="unselectable codeClass">			<font color="green">//<b> W는 위로 이동 </b></font>
+</pre>
+<pre id="code10" class="unselectable codeClass">10			<font color='red' title="선택문에서 정수형 변수를 특정 정수값과 비교하는 명령문">case</font> UP: <font color='red' title="선택문에서 정수형 변수를 특정 정수값과 비교하는 명령문">case</font> up:
+</pre>
+<pre id="code11" class="unselectable codeClass">11				printf(" <font color='red' title="출력 설정 이스케이프 문자">\033</font>[1;6f 옷/ ");
+</pre>
+<pre id="code12" class="unselectable codeClass">12				<font color='red' title="실행흐름을 중단하고 해당 영역을 빠져나오는 명령문">break</font>;
+</pre><pre id="code0" class="unselectable codeClass">			<font color="green">//<b> A는 왼쪽으로 이동 </b></font>
+</pre>
+<pre id="code13" class="unselectable codeClass">13			<font color='red' title="선택문에서 정수형 변수를 특정 정수값과 비교하는 명령문">case</font> LEFT: <font color='red' title="선택문에서 정수형 변수를 특정 정수값과 비교하는 명령문">case</font> left:
+</pre>
+<pre id="code14" class="unselectable codeClass">14				printf(" <font color='red' title="출력 설정 이스케이프 문자">\033</font>[2;1f 옷] ");
+</pre>
+<pre id="code15" class="unselectable codeClass">15				<font color='red' title="실행흐름을 중단하고 해당 영역을 빠져나오는 명령문">break</font>;
+</pre><pre id="code0" class="unselectable codeClass">			<font color="green">//<b> S는 아래로 이동 </b></font>
+</pre>
+<pre id="code16" class="unselectable codeClass">16			<font color='red' title="선택문에서 정수형 변수를 특정 정수값과 비교하는 명령문">case</font> DOWN: <font color='red' title="선택문에서 정수형 변수를 특정 정수값과 비교하는 명령문">case</font> down:
+</pre>
+<pre id="code17" class="unselectable codeClass">17				printf(" <font color='red' title="출력 설정 이스케이프 문자">\033</font>[3;6f 옷-> ");
+</pre>
+<pre id="code18" class="unselectable codeClass">18				<font color='red' title="실행흐름을 중단하고 해당 영역을 빠져나오는 명령문">break</font>;
+</pre><pre id="code0" class="unselectable codeClass">			<font color="green">//<b> D는 오른쪽으로 이동 </b></font>
+</pre>
+<pre id="code19" class="unselectable codeClass">19			<font color='red' title="선택문에서 정수형 변수를 특정 정수값과 비교하는 명령문">case</font> RIGHT: <font color='red' title="선택문에서 정수형 변수를 특정 정수값과 비교하는 명령문">case</font> right:
+</pre>
+<pre id="code20" class="unselectable codeClass">20				printf(" <font color='red' title="출력 설정 이스케이프 문자">\033</font>[1;1f              \n");
+</pre>
+<pre id="code21" class="unselectable codeClass">21				printf("   Success!!   \n");
+</pre>
+<pre id="code22" class="unselectable codeClass">22				printf("              ");
+</pre><pre id="code0" class="unselectable codeClass">		}
+</pre><pre id="code0" class="unselectable codeClass">	 
+</pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> 프로그램 종료 </b></font>
+</pre>
+<pre id="code23" class="unselectable codeClass">23		return 0;
+</pre><pre id="code0" class="unselectable codeClass">	}
+</pre></div>	 	 				<br><h4>키워드 설명</h4> 				<pre id = "sP3d3" style='white-space:normal;'></pre> 			 				<h4>실행 순서</h4> 				<pre id = "sP3d4" style='white-space:normal; width:800px;'> </pre> 				<pre style='white-space:normal;'> 					※ 실행순서 및 메모리상태는 A키(이전) 및 D키(다음)를 눌러도 확인할 수 있습니다  				</pre> 				<br><br> 			</div> 			<div id = "floatingBox"> 				<pre id = "outputBox" class ="outputBox" style = "color:White;height:110px;width:260px;padding:10px;margin:0px;"></pre>  				<div id = "intermediateResult"> 					<img id = "sP3d7"> 					<table style = "border-spacing:0px;margin:0px;table-layout:auto;"> 						<tbody id = "sP3d8"></tbody> 					</table> 				</div> 			</div> 		</div> 	</body> </html> 
