--- a/Cg5i3s.html
+++ b/Cg5i3s.html
@@ -19,15 +19,13 @@
 </pre><pre id="code7" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('7')">7			 	CIRCUMFERENCE( radius );
 </pre><pre id="code8" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('8')">8		circularArea =
 </pre><pre id="code9" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('9')">9			 	CIRCULARAREA( radius );
-
-</pre><pre id="code10" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('10')">10		printf("반지름 %.2f인 원둘레는 %.2f이고 원면적은 %.2f입니다.",
+</pre><pre id="code10" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('10')">10		printf("반지름 %.2f인 원둘레는 %.2f이고 원면적은 %.2f입니다.\n",
 </pre><pre id="code0" class="unselectable codeClass">						radius, circumference, circularArea );
 
 </pre><pre id="code11" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('11')">11		circumference =
 </pre><pre id="code12" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('12')">12			 	CIRCUMFERENCE( radius + 1 );
 </pre><pre id="code13" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('13')">13		circularArea =
 </pre><pre id="code14" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('14')">14			 	CIRCULARAREA( radius + 1 );
-
 </pre><pre id="code15" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('15')">15		printf("반지름 ( %.2f + 1.00 )인 원둘레는 %.2f이고 원면적은 %.2f입니다.",
 </pre><pre id="code0" class="unselectable codeClass">						radius, circumference, circularArea);
 
