--- a/Cg5i1.html
+++ b/Cg5i1.html
@@ -19,8 +19,8 @@ WASD와 [Enter]를 입력하세요: <b><font color='red'>s</font></b>
       / 
   [        문
       옷->
-</pre><br> 	  				<h4>알고리즘</h4> 				<pre style='white-space:normal;'>프로그램시작 <br>&nbsp; &nbsp;캐릭터의 초기 위치를 출력 <br>&nbsp; &nbsp;이동 방향 입력 받기 <br>&nbsp; &nbsp;이동 결과 출력 <br>&nbsp; &nbsp;&nbsp; &nbsp;W는 위로 이동 <br>&nbsp; &nbsp;&nbsp; &nbsp;A는 왼쪽으로 이동 <br>&nbsp; &nbsp;&nbsp; &nbsp;S는 아래로 이동 <br>&nbsp; &nbsp;&nbsp; &nbsp;D는 오른쪽으로 이동 <br>프로그램 종료 <br></pre> 		 				<br><h4>프로그램 코드 <input id='btn' type='button' value='실행순서 및 메모리상태 확인' onclick='sP3f5();'/></h4>  				<div id = "codeBox"><pre id="code0" class="unselectable codeClass">	<font color="green">// 파일명 : ./Chapter15/Direction.c</font>
-</pre><pre id="code0" class="unselectable codeClass">	#include &lt;stdio.h&gt;
+</pre><br> 	  				<h4>알고리즘</h4> 				<pre style='white-space:normal;'>프로그램시작 <br>&nbsp; &nbsp;먼저 캐릭터의 초기 위치를 출력 <br>&nbsp; &nbsp;이동 방향 입력 받기 <br>&nbsp; &nbsp;이동 결과 출력 <br>&nbsp; &nbsp;&nbsp; &nbsp;W는 위로 이동 <br>&nbsp; &nbsp;&nbsp; &nbsp;A는 왼쪽으로 이동 <br>&nbsp; &nbsp;&nbsp; &nbsp;S는 아래로 이동 <br>&nbsp; &nbsp;&nbsp; &nbsp;D는 오른쪽으로 이동 <br>프로그램 종료 <br></pre> 		 				<br><h4>프로그램 코드 <input id='btn' type='button' value='실행순서 및 메모리상태 확인' onclick='sP3f5();'/></h4>  				<div id = "codeBox"><pre id="code0" class="unselectable codeClass">	<font color="green">// 파일명 : ./Chapter15/Direction.c</font>
+</pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="헤더파일(.h) 내용을 소스코드(.c)에 포함하는 명령문">include</font> <<font color='red' title="표준입출력 관련 함수 정보를 가지고 있는 헤더파일">stdio.h</font>>
 </pre><pre id="code0" class="unselectable codeClass">	 
 </pre><pre id="code0" class="unselectable codeClass">	<font color="green">// 방향 매크로 상수 정의</font>
 </pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="매크로 이름을 대체 문자열로 치환할 수 있도록 정의">define</font> up 'w'
@@ -38,7 +38,7 @@ WASD와 [Enter]를 입력하세요: <b><font color='red'>s</font></b>
 </pre>
 <pre id="code2" class="unselectable codeClass">2		char direction = UP;
 </pre><pre id="code0" class="unselectable codeClass">	 
-</pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> 캐릭터의 초기 위치를 출력 </b></font>
+</pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> 먼저 캐릭터의 초기 위치를 출력 </b></font>
 </pre>
 <pre id="code3" class="unselectable codeClass">3		printf("      / \n");
 </pre>
