--- a/Cg5i1b.html
+++ b/Cg5i1b.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script type="text/javascript" src="../functions.js"></script> 		<script> 			const sP3d10 = [ [ "define","#define" ], [ "define","#define" ], [ "define","#define" ], [ "define","#define" ], [ "define","#define" ], [ "define","#define" ], [ "define","#define" ], [ "define","#define" ], [ "int","short","long" ], [ "\\033","\033" ], [ "switch","switch()" ], [ "case" ], [ "case" ], [ "\\033","\033" ], [ "break","break;" ], [ "case" ], [ "case" ], [ "\\033","\033" ], [ "break","break;" ], [ "case" ], [ "case" ], [ "\\033","\033" ], [ "break","break;" ], [ "case" ], [ "case" ], [ "\\033","\033" ], 							]; 		</script> 	</head> 	<body oncontextmenu="return false" onselectstart="return false" oncopy="return false" oncut="return false" onpaste="return false" draggable="false" ondragstart="return false" ondrop="return false"> 		<div id = "container"> 			<div id = "titleBox"> C 프로그래밍 </div> 			<div id = "navigationBox"><ol><li><a href='../Cf1i/Cf1i1.html'>출력</a></li><li><a href='../Cf2i/Cf2i1.html'>입력</a></li><li><a href='../Cf3i/Cf3i1.html'>변수/연산자</a></li><li><a href='../Cf4i/Cf4i1.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Cf5i/Cf5i1.html'>선택문(if)</a></li><li><a href='../Cf6i/Cf6i1.html'>반복문(while)</a></li><li><a href='../Cf7i/Cf7i1.html'>반복문(for)</a></li><li><a href='../Cf8i/Cf8i1.html'>배열</a></li><li><a href='../Cf9i/Cf9i1.html'>문자열</a></li><li><a href='../Cg0i/Cg0i1.html'>함수</a></li><li><a href='../Cg1i/Cg1i1.html'>포인터</a></li><li><a href='../Cg2i/Cg2i1.html'>파일입출력</a></li><li><a href='../Cg3i/Cg3i1.html'>열거형/구조체/동적할당</a></li><li><a href='../Cg4i/Cg4i1.html'>함수자료전달</a></li><li><a href='../Cg5i/Cg5i1.html'>전처리기/파일분할</a></li><ul><li><a href='../Cg5i/Cg5i1.html'>캐릭터 한 칸 이동</a></li><ul><li><a href='Cg5i1.html'>코드읽기</a></li><li><a href='Cg5i1a.html'>알고리즘</a></li><li><a href='Cg5i1k.html'>키워드</a></li><li><a href='Cg5i1b.html'>빈칸채우기</a></li><li><a href='Cg5i1s.html'>실행순서</a></li><li><a href='Cg5i1m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/C/blob/main/Chapter15/Direction.c' target='code'>소스코드</a></li></ul><li><a href='../Cg5i/Cg5i2.html'>가위바위보</a></li><li><a href='../Cg5i/Cg5i3.html'>원둘레 원면적</a></li><li><a href='../Cg5i/Cg5i4.html'>구슬 찾기</a></li><li><a href='../Cg5i/Cg5i5.html'>캐릭터 이동</a></li></ul></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>캐릭터가 한 칸 이동해서 방패([), 칼(/), 창(->), 출구(문) 중 하나를 선택하는 문제입니다 이를 해결하는 다음 프로그램에 대해 빈칸을 채우세요 </pre> 				<pre class='selectable'>      / 
+<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script type="text/javascript" src="../functions.js"></script> 		<script> 			const sP3d10 = [ [ "include","#include" ], [ "stdio.h" ], [ "define","#define" ], [ "define","#define" ], [ "define","#define" ], [ "define","#define" ], [ "define","#define" ], [ "define","#define" ], [ "define","#define" ], [ "define","#define" ], [ "int","short","long" ], [ "\\033","\033" ], [ "switch","switch()" ], [ "case" ], [ "case" ], [ "\\033","\033" ], [ "break","break;" ], [ "case" ], [ "case" ], [ "\\033","\033" ], [ "break","break;" ], [ "case" ], [ "case" ], [ "\\033","\033" ], [ "break","break;" ], [ "case" ], [ "case" ], [ "\\033","\033" ], 							]; 		</script> 	</head> 	<body oncontextmenu="return false" onselectstart="return false" oncopy="return false" oncut="return false" onpaste="return false" draggable="false" ondragstart="return false" ondrop="return false"> 		<div id = "container"> 			<div id = "titleBox"> C 프로그래밍 </div> 			<div id = "navigationBox"><ol><li><a href='../Cf1i/Cf1i1.html'>출력</a></li><li><a href='../Cf2i/Cf2i1.html'>입력</a></li><li><a href='../Cf3i/Cf3i1.html'>변수/연산자</a></li><li><a href='../Cf4i/Cf4i1.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Cf5i/Cf5i1.html'>선택문(if)</a></li><li><a href='../Cf6i/Cf6i1.html'>반복문(while)</a></li><li><a href='../Cf7i/Cf7i1.html'>반복문(for)</a></li><li><a href='../Cf8i/Cf8i1.html'>배열</a></li><li><a href='../Cf9i/Cf9i1.html'>문자열</a></li><li><a href='../Cg0i/Cg0i1.html'>함수</a></li><li><a href='../Cg1i/Cg1i1.html'>포인터</a></li><li><a href='../Cg2i/Cg2i1.html'>파일입출력</a></li><li><a href='../Cg3i/Cg3i1.html'>열거형/구조체/동적할당</a></li><li><a href='../Cg4i/Cg4i1.html'>함수자료전달</a></li><li><a href='../Cg5i/Cg5i1.html'>전처리기/파일분할</a></li><ul><li><a href='../Cg5i/Cg5i1.html'>캐릭터 한 칸 이동</a></li><ul><li><a href='Cg5i1.html'>코드읽기</a></li><li><a href='Cg5i1a.html'>알고리즘</a></li><li><a href='Cg5i1k.html'>키워드</a></li><li><a href='Cg5i1b.html'>빈칸채우기</a></li><li><a href='Cg5i1s.html'>실행순서</a></li><li><a href='Cg5i1m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/C/blob/main/Chapter15/Direction.c' target='code'>소스코드</a></li></ul><li><a href='../Cg5i/Cg5i2.html'>가위바위보</a></li><li><a href='../Cg5i/Cg5i3.html'>원둘레 원면적</a></li><li><a href='../Cg5i/Cg5i4.html'>구슬 찾기</a></li><li><a href='../Cg5i/Cg5i5.html'>캐릭터 이동</a></li></ul></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>캐릭터가 한 칸 이동해서 방패([), 칼(/), 창(->), 출구(문) 중 하나를 선택하는 문제입니다 이를 해결하는 다음 프로그램에 대해 빈칸을 채우세요 </pre> 				<pre class='selectable'>      / 
   [   옷   문
       -> 
 WASD와 [Enter]를 입력하세요: <b><font color='red'>a</font></b>
@@ -19,18 +19,18 @@ WASD와 [Enter]를 입력하세요: <b><font color='red'>s</font></b>
       / 
   [        문
       옷->
-</pre><br>  	  				<h4>코드 빈칸 채우기</h4> 				<pre style='white-space:pre;border:1px'>#include &lt;stdio.h&gt; 					 
+</pre><br>  	  				<h4>코드 빈칸 채우기</h4> 				<pre style='white-space:pre;border:1px'>#<input id='blank0' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(0)'> <<input id='blank1' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(1)'>> 					 
  
-#<input id='blank0' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(0)'> up 'w' 
-#<input id='blank1' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(1)'> UP 'W' 
-#<input id='blank2' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(2)'> down 's' 
-#<input id='blank3' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(3)'> DOWN 'S' 
-#<input id='blank4' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(4)'> left 'a' 
-#<input id='blank5' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(5)'> LEFT 'A' 
-#<input id='blank6' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(6)'> right 'd' 
-#<input id='blank7' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(7)'> RIGHT 'D' 
+#<input id='blank2' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(2)'> up 'w' 
+#<input id='blank3' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(3)'> UP 'W' 
+#<input id='blank4' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(4)'> down 's' 
+#<input id='blank5' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(5)'> DOWN 'S' 
+#<input id='blank6' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(6)'> left 'a' 
+#<input id='blank7' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(7)'> LEFT 'A' 
+#<input id='blank8' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(8)'> right 'd' 
+#<input id='blank9' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(9)'> RIGHT 'D' 
  
-<input id='blank8' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(8)'> main() { 
+<input id='blank10' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(10)'> main() { 
 	char direction = UP; 
  
 	printf("      / \n"); 
@@ -40,19 +40,19 @@ WASD와 [Enter]를 입력하세요: <b><font color='red'>s</font></b>
 	printf("방향키(WASD)와 [Enter]를 입력하세요: " ); 
 	scanf("%c",&direction); 
  
-	printf(" <input id='blank9' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(9)'>[2;6f  "); 
-	<input id='blank10' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(10)'>( direction ) { 
-		<input id='blank11' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(11)'> UP: <input id='blank12' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(12)'> up:  
-			printf(" <input id='blank13' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(13)'>[1;6f 옷/ "); 
-			<input id='blank14' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(14)'>; 
-		<input id='blank15' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(15)'> LEFT: <input id='blank16' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(16)'> left:  
-			printf(" <input id='blank17' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(17)'>[2;1f 옷] "); 
-			<input id='blank18' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(18)'>; 
-		<input id='blank19' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(19)'> DOWN: <input id='blank20' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(20)'> down:  
-			printf(" <input id='blank21' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(21)'>[3;6f 옷-> "); 
-			<input id='blank22' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(22)'>; 
-		<input id='blank23' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(23)'> RIGHT: <input id='blank24' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(24)'> right:  
-			printf(" <input id='blank25' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(25)'>[1;1f              \n"); 
+	printf(" <input id='blank11' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(11)'>[2;6f  "); 
+	<input id='blank12' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(12)'>( direction ) { 
+		<input id='blank13' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(13)'> UP: <input id='blank14' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(14)'> up:  
+			printf(" <input id='blank15' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(15)'>[1;6f 옷/ "); 
+			<input id='blank16' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(16)'>; 
+		<input id='blank17' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(17)'> LEFT: <input id='blank18' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(18)'> left:  
+			printf(" <input id='blank19' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(19)'>[2;1f 옷] "); 
+			<input id='blank20' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(20)'>; 
+		<input id='blank21' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(21)'> DOWN: <input id='blank22' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(22)'> down:  
+			printf(" <input id='blank23' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(23)'>[3;6f 옷-> "); 
+			<input id='blank24' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(24)'>; 
+		<input id='blank25' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(25)'> RIGHT: <input id='blank26' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(26)'> right:  
+			printf(" <input id='blank27' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(27)'>[1;1f              \n"); 
 			printf("   Success!!   \n"); 
 			printf("              "); 
 	} 
