--- a/Cg5i2.html
+++ b/Cg5i2.html
@@ -14,8 +14,8 @@ B군, 가위(1), 바위(2), 보(3) 중 하나를 숫자로 입력하세요: <b><
 바위를 냈습니다.
 A양과 B군이 비겼습니다.
 </pre><br> 	  				<h4>알고리즘</h4> 				<pre style='white-space:normal;'> 프로그램시작 <br> &nbsp; &nbsp;A양이 가위바위보중 하나를 선택 <br> &nbsp; &nbsp;B군이 가위바위보중 하나를 선택 <br> &nbsp; &nbsp;A양과 B군의 가위바위보 승패 출력 <br> &nbsp; &nbsp;&nbsp; &nbsp;먼저 A양과 B군이 비긴 경우 출력 <br> &nbsp; &nbsp;&nbsp; &nbsp;A양이 이긴 경우 출력 <br> &nbsp; &nbsp;&nbsp; &nbsp;B군이 이긴 경우 출력 <br> 프로그램 종료 <br> <br> 가위바위보 입력 함수 <br> &nbsp; &nbsp;사용자가 가위바위보중 하나를 선택 <br> &nbsp; &nbsp;사용자가 선택한 결과를 출력 <br> <br> A양이 승리한 경우 확인 매크로 함수 <br> &nbsp; &nbsp;A양이 가위이고 B군이 보를 낸 경우 A양 승리 <br> &nbsp; &nbsp;A양이 바위이고 B군이 가위를 낸 경우 A양 승리 <br> &nbsp; &nbsp;A양이 보이고 B군이 바위를 낸 경우 A양 승리 <br></pre> 		 				<br><h4>프로그램 코드 <input id='btn' type='button' value='실행순서 및 메모리상태 확인' onclick='sP3f5();'/></h4>  				<div id = "codeBox"><pre id="code0" class="unselectable codeClass">	<font color="green">// 파일명 : ./Chapter15/RockPaperScissors.c</font>
-</pre><pre id="code0" class="unselectable codeClass">	#include &lt;stdio.h&gt;
-</pre><pre id="code0" class="unselectable codeClass">	#include &lt;stdlib.h&gt;
+</pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="헤더파일(.h) 내용을 소스코드(.c)에 포함하는 명령문">include</font> <<font color='red' title="표준입출력 관련 함수 정보를 가지고 있는 헤더파일">stdio.h</font>>
+</pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="헤더파일(.h) 내용을 소스코드(.c)에 포함하는 명령문">include</font> <<font color='red' title="rand, malloc 등 자주 사용되는 함수 정보를 가지고 있는 표준 라이브러리 헤더파일">stdlib.h</font>>
 </pre><pre id="code0" class="unselectable codeClass">	 
 </pre><pre id="code0" class="unselectable codeClass">	<font color="green">// 가위바위보 매크로 상수 정의</font>
 </pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="매크로 이름을 대체 문자열로 치환할 수 있도록 정의">define</font> SCISSOR 1
@@ -24,12 +24,12 @@ A양과 B군이 비겼습니다.
 </pre><pre id="code0" class="unselectable codeClass">		 
 </pre><pre id="code0" class="unselectable codeClass">	<font color="green">//<b> A양이 승리한 경우 확인 매크로 함수 </b></font>
 </pre>
-<pre id="codeF1" class="unselectable codeClass">F1	#<font color='red' title="매크로 이름을 대체 문자열로 치환할 수 있도록 정의">define</font> <font color='red' title="A양이 이긴 경우 1을 반환하는 매크로 함수">DoesPlayerAWin</font>( playerA, playerB )
+<pre id="codeF1" class="unselectable codeClass">F1	#<font color='red' title="매크로 이름을 대체 문자열로 치환할 수 있도록 정의">define</font> DoesPlayerAWin( playerA, playerB )
 </pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> A양이 가위이고 B군이 보를 낸 경우 A양 승리 </b></font>
-</pre><pre id="code0" class="unselectable codeClass">		( ( ( playerA == SCISSOR ) && ( playerB == PAPER ) )
 </pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> A양이 바위이고 B군이 가위를 낸 경우 A양 승리 </b></font>
-</pre><pre id="code0" class="unselectable codeClass">		|| ( ( playerA == ROCK ) && ( playerB == SCISSOR ) )
 </pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> A양이 보이고 B군이 바위를 낸 경우 A양 승리 </b></font>
+</pre><pre id="code0" class="unselectable codeClass">		( ( ( playerA == SCISSOR ) && ( playerB == PAPER ) )
+</pre><pre id="code0" class="unselectable codeClass">		|| ( ( playerA == ROCK ) && ( playerB == SCISSOR ) )
 </pre><pre id="code0" class="unselectable codeClass">		|| ( ( playerA == PAPER ) && ( playerB == ROCK ) ) )
 </pre><pre id="code0" class="unselectable codeClass">		<font color='red' title="삼항연산자에서 조건식이 참인지 거짓인지 확인하는 기호">?</font> 1 : 0
 </pre><pre id="code0" class="unselectable codeClass">	 
