--- a/Cg5i4.html
+++ b/Cg5i4.html
@@ -19,10 +19,10 @@
                놓쳤다!
  1, 2, 3 중에서 구슬[O]을 숨긴 컵을 찾으세요 : <b><font color='red'>3</font></b>
  [DEBUG] 구슬 위치 2
-</pre><br> 	  				<h4>알고리즘</h4> 				<pre style='white-space:normal;'>프로그램시작 <br>&nbsp; &nbsp;3개 컵 중에서 하나에 구슬 숨기기 <br>&nbsp; &nbsp;사용자에게 구슬을 숨긴 컵 번호 입력 받기 <br>&nbsp; &nbsp;구슬 찾기 결과 출력 <br>프로그램 종료 <br></pre> 		 				<br><h4>프로그램 코드 <input id='btn' type='button' value='실행순서 및 메모리상태 확인' onclick='sP3f5();'/></h4>  				<div id = "codeBox"><pre id="code0" class="unselectable codeClass">	<font color="green">// 파일명 : ./Chapter15/ThreeCupGame.c</font>
-</pre><pre id="code0" class="unselectable codeClass">	#include &lt;stdio.h&gt;
-</pre><pre id="code0" class="unselectable codeClass">	#include &lt;<font color='red' title="rand, malloc 등 자주 사용되는 함수 정보를 가지고 있는 표준 라이브러리 헤더파일">stdlib.h</font>>
-</pre><pre id="code0" class="unselectable codeClass">	#include &lt;time.h&gt;
+</pre><br> 	  				<h4>알고리즘</h4> 				<pre style='white-space:normal;'>프로그램시작 <br>&nbsp; &nbsp;먼저 3개 컵 중에서 하나에 구슬 숨기기 <br>&nbsp; &nbsp;사용자에게 구슬을 숨긴 컵 번호 입력 받기 <br>&nbsp; &nbsp;구슬 찾기 결과 출력 <br>프로그램 종료 <br></pre> 		 				<br><h4>프로그램 코드 <input id='btn' type='button' value='실행순서 및 메모리상태 확인' onclick='sP3f5();'/></h4>  				<div id = "codeBox"><pre id="code0" class="unselectable codeClass">	<font color="green">// 파일명 : ./Chapter15/ThreeCupGame.c</font>
+</pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="헤더파일(.h) 내용을 소스코드(.c)에 포함하는 명령문">include</font> <<font color='red' title="표준입출력 관련 함수 정보를 가지고 있는 헤더파일">stdio.h</font>>
+</pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="헤더파일(.h) 내용을 소스코드(.c)에 포함하는 명령문">include</font> <<font color='red' title="rand, malloc 등 자주 사용되는 함수 정보를 가지고 있는 표준 라이브러리 헤더파일">stdlib.h</font>>
+</pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="헤더파일(.h) 내용을 소스코드(.c)에 포함하는 명령문">include</font> <<font color='red' title="시간 관련 함수 정보를 가지고 있는 헤더파일">time.h</font>>
 </pre><pre id="code0" class="unselectable codeClass">	 
 </pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="매크로 이름을 대체 문자열로 치환할 수 있도록 정의">define</font> DEBUG
 </pre><pre id="code0" class="unselectable codeClass">	 
@@ -31,7 +31,7 @@
 <pre id="code1" class="unselectable codeClass">1	int main() {
 </pre><pre id="code0" class="unselectable codeClass">		int ball=0, cup=0;
 </pre><pre id="code0" class="unselectable codeClass">		 
-</pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> 3개 컵 중에서 하나에 구슬 숨기기 </b></font>
+</pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> 먼저 3개 컵 중에서 하나에 구슬 숨기기 </b></font>
 </pre><pre id="code0" class="unselectable codeClass">		<font color='red' title="매번 다른 패턴으로 임의값을 생성하도록 초기값을 설정하는 함수">srand</font>( <font color='red' title="시간(초) 정보를 가져오는 함수">time</font>( NULL ) );
 </pre>
 <pre id="code2" class="unselectable codeClass">2		ball = <font color='red' title="0 ~ 32,767 사이의 정수 중 임의의 수 하나를 반환하는 함수">rand</font>() <font color='red' title="나머지 연산자">%</font> 3 + 1;
