--- a/Cg5i4b.html
+++ b/Cg5i4b.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script type="text/javascript" src="../functions.js"></script> 		<script> 			const sP3d10 = [ [ "stdlib.h" ], [ "define","#define" ], [ "srand","srand()" ], [ "time","time()" ], [ "rand","rand()" ], [ "%" ], [ "ifdef","#ifdef" ], [ "endif","#endif" ], [ "==" ], [ "?" ], 							]; 		</script> 	</head> 	<body oncontextmenu="return false" onselectstart="return false" oncopy="return false" oncut="return false" onpaste="return false" draggable="false" ondragstart="return false" ondrop="return false"> 		<div id = "container"> 			<div id = "titleBox"> C 프로그래밍 </div> 			<div id = "navigationBox"><ol><li><a href='../Cf1i/Cf1i1.html'>출력</a></li><li><a href='../Cf2i/Cf2i1.html'>입력</a></li><li><a href='../Cf3i/Cf3i1.html'>변수/연산자</a></li><li><a href='../Cf4i/Cf4i1.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Cf5i/Cf5i1.html'>선택문(if)</a></li><li><a href='../Cf6i/Cf6i1.html'>반복문(while)</a></li><li><a href='../Cf7i/Cf7i1.html'>반복문(for)</a></li><li><a href='../Cf8i/Cf8i1.html'>배열</a></li><li><a href='../Cf9i/Cf9i1.html'>문자열</a></li><li><a href='../Cg0i/Cg0i1.html'>함수</a></li><li><a href='../Cg1i/Cg1i1.html'>포인터</a></li><li><a href='../Cg2i/Cg2i1.html'>파일입출력</a></li><li><a href='../Cg3i/Cg3i1.html'>열거형/구조체/동적할당</a></li><li><a href='../Cg4i/Cg4i1.html'>함수자료전달</a></li><li><a href='../Cg5i/Cg5i1.html'>전처리기/파일분할</a></li><ul><li><a href='../Cg5i/Cg5i1.html'>캐릭터 한 칸 이동</a></li><li><a href='../Cg5i/Cg5i2.html'>가위바위보</a></li><li><a href='../Cg5i/Cg5i3.html'>원둘레 원면적</a></li><li><a href='../Cg5i/Cg5i4.html'>구슬 찾기</a></li><ul><li><a href='Cg5i4.html'>코드읽기</a></li><li><a href='Cg5i4a.html'>알고리즘</a></li><li><a href='Cg5i4k.html'>키워드</a></li><li><a href='Cg5i4b.html'>빈칸채우기</a></li><li><a href='Cg5i4s.html'>실행순서</a></li><li><a href='Cg5i4m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/C/blob/main/Chapter15/ThreeCupGame.c' target='code'>소스코드</a></li></ul><li><a href='../Cg5i/Cg5i5.html'>캐릭터 이동</a></li></ul></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>구슬을 3개 컵 중에서 어디에 숨겼는지 사용자가 맞추는 문제입니다 이를 해결하는 다음 프로그램에 대해 빈칸을 채우세요 </pre> 				<pre class='selectable'>  ___    ___    ___  
+<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script type="text/javascript" src="../functions.js"></script> 		<script> 			const sP3d10 = [ [ "include","#include" ], [ "stdio.h" ], [ "include","#include" ], [ "stdlib.h" ], [ "include","#include" ], [ "time.h" ], [ "define","#define" ], [ "srand","srand()" ], [ "time","time()" ], [ "rand","rand()" ], [ "%" ], [ "ifdef","#ifdef" ], [ "endif","#endif" ], [ "==" ], [ "?" ], 							]; 		</script> 	</head> 	<body oncontextmenu="return false" onselectstart="return false" oncopy="return false" oncut="return false" onpaste="return false" draggable="false" ondragstart="return false" ondrop="return false"> 		<div id = "container"> 			<div id = "titleBox"> C 프로그래밍 </div> 			<div id = "navigationBox"><ol><li><a href='../Cf1i/Cf1i1.html'>출력</a></li><li><a href='../Cf2i/Cf2i1.html'>입력</a></li><li><a href='../Cf3i/Cf3i1.html'>변수/연산자</a></li><li><a href='../Cf4i/Cf4i1.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Cf5i/Cf5i1.html'>선택문(if)</a></li><li><a href='../Cf6i/Cf6i1.html'>반복문(while)</a></li><li><a href='../Cf7i/Cf7i1.html'>반복문(for)</a></li><li><a href='../Cf8i/Cf8i1.html'>배열</a></li><li><a href='../Cf9i/Cf9i1.html'>문자열</a></li><li><a href='../Cg0i/Cg0i1.html'>함수</a></li><li><a href='../Cg1i/Cg1i1.html'>포인터</a></li><li><a href='../Cg2i/Cg2i1.html'>파일입출력</a></li><li><a href='../Cg3i/Cg3i1.html'>열거형/구조체/동적할당</a></li><li><a href='../Cg4i/Cg4i1.html'>함수자료전달</a></li><li><a href='../Cg5i/Cg5i1.html'>전처리기/파일분할</a></li><ul><li><a href='../Cg5i/Cg5i1.html'>캐릭터 한 칸 이동</a></li><li><a href='../Cg5i/Cg5i2.html'>가위바위보</a></li><li><a href='../Cg5i/Cg5i3.html'>원둘레 원면적</a></li><li><a href='../Cg5i/Cg5i4.html'>구슬 찾기</a></li><ul><li><a href='Cg5i4.html'>코드읽기</a></li><li><a href='Cg5i4a.html'>알고리즘</a></li><li><a href='Cg5i4k.html'>키워드</a></li><li><a href='Cg5i4b.html'>빈칸채우기</a></li><li><a href='Cg5i4s.html'>실행순서</a></li><li><a href='Cg5i4m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/C/blob/main/Chapter15/ThreeCupGame.c' target='code'>소스코드</a></li></ul><li><a href='../Cg5i/Cg5i5.html'>캐릭터 이동</a></li></ul></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>구슬을 3개 컵 중에서 어디에 숨겼는지 사용자가 맞추는 문제입니다 이를 해결하는 다음 프로그램에 대해 빈칸을 채우세요 </pre> 				<pre class='selectable'>  ___    ___    ___  
  |   |  |   |  |   | 
  | 1 |  | 2 |  | 3 | 
    O 
@@ -19,20 +19,20 @@
                놓쳤다!
  1, 2, 3 중에서 구슬[O]을 숨긴 컵을 찾으세요 : <b><font color='red'>3</font></b>
  [DEBUG] 구슬 위치 2
-</pre><br>  	  				<h4>코드 빈칸 채우기</h4> 				<pre style='white-space:pre;border:1px'>#include &lt;stdio.h&gt; 			 
-#include &lt;<input id='blank0' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(0)'>>				 
-#include &lt;time.h&gt;				 
+</pre><br>  	  				<h4>코드 빈칸 채우기</h4> 				<pre style='white-space:pre;border:1px'>#<input id='blank0' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(0)'> <<input id='blank1' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(1)'>> 			 
+#<input id='blank2' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(2)'> <<input id='blank3' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(3)'>>				 
+#<input id='blank4' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(4)'> <<input id='blank5' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(5)'>>				 
  
-#<input id='blank1' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(1)'> DEBUG 
+#<input id='blank6' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(6)'> DEBUG 
  
 int main() { 
 	int ball=0, cup=0; 
 	 
-	<input id='blank2' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(2)'>( <input id='blank3' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(3)'>( NULL ) ); 
-	ball = <input id='blank4' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(4)'>() <input id='blank5' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(5)'> 3 + 1; 
-	#<input id='blank6' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(6)'> DEBUG 
+	<input id='blank7' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(7)'>( <input id='blank8' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(8)'>( NULL ) ); 
+	ball = <input id='blank9' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(9)'>() <input id='blank10' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(10)'> 3 + 1; 
+	#<input id='blank11' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(11)'> DEBUG 
 	printf("\033[8;1f [DEBUG] 구슬 위치 %d \033[1;1f", ball); 
-	#<input id='blank7' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(7)'>  
+	#<input id='blank12' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(12)'>  
 	 
 	printf("  ___    ___    ___  \n"); 
 	printf(" |   |  |   |  |   | \n"); 
@@ -42,7 +42,7 @@ int main() {
 	scanf( "%d", &cup ); 
 		 
 	printf(" \033[4;%dfO\n \033[5;%df", ball*7-3, cup*7-5 ); 
-	( cup <input id='blank8' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(8)'> ball ) <input id='blank9' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(9)'> printf("찾았다!\n") : printf("놓쳤다!\n"); 
+	( cup <input id='blank13' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(13)'> ball ) <input id='blank14' type='text' required minlength='1' maxlength='30' size='6' onchange='sP3f6(14)'> printf("찾았다!\n") : printf("놓쳤다!\n"); 
  
 	return 0; 
 } 	 			</pre> 			</div> 		</div> 	</body> </html> 
