--- a/Cg5i5.html
+++ b/Cg5i5.html
@@ -75,7 +75,7 @@ WASD와 [Enter]를 입력하세요:<b><font color='red'>q</font></b>
 </pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="헤더파일(.h) 내용을 소스코드(.c)에 포함하는 명령문">include</font> "CharacterMovement.h"
 </pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="헤더파일(.h) 내용을 소스코드(.c)에 포함하는 명령문">include</font> "ReadWriteMap.h"
 </pre><pre id="code0" class="unselectable codeClass">	 
-</pre><pre id="code0" class="unselectable codeClass">	<font color='red' title="다른 파일에 선언된 전역변수에 접근하기 위해 extern을 사용해 한번 더 선언">extern</font> char map[100][100];
+</pre><pre id="code0" class="unselectable codeClass">	<font color='red' title="다른 파일에 선언된 전역변수에 접근하기 위해 사용">extern</font> char map[100][100];
 </pre><pre id="code0" class="unselectable codeClass">		 
 </pre><pre id="code0" class="unselectable codeClass">	<font color="green">//<b> 프로그램시작 </b></font>
 </pre>
@@ -138,30 +138,24 @@ WASD와 [Enter]를 입력하세요:<b><font color='red'>q</font></b>
 </pre><pre id="code0" class="unselectable codeClass">	<font color="green">// 파일명 : ./Chapter15/ReadWriteMap.c</font>
 </pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="헤더파일(.h) 내용을 소스코드(.c)에 포함하는 명령문">include</font> <<font color='red' title="표준입출력 관련 함수 정보를 가지고 있는 헤더파일">stdio.h</font>>
 </pre><pre id="code0" class="unselectable codeClass">	<font color="green">// 전역변수 맵</font>
-</pre><pre id="code0" class="unselectable codeClass">	<font color='red' title="다른 파일에 선언된 전역변수에 접근하기 위해 extern을 사용해 한번 더 선언">extern</font> char map[100][100];
+</pre><pre id="code0" class="unselectable codeClass">	<font color='red' title="다른 파일에 선언된 전역변수에 접근하기 위해 사용">extern</font> char map[100][100];
 </pre><pre id="code0" class="unselectable codeClass">	 
 </pre><pre id="code0" class="unselectable codeClass">	<font color="green">//<b> 맵 읽기 함수 </b></font>
 </pre>
 <pre id="codeF1b" class="unselectable codeClass">F1b	int readMap( char *filename ) {
-</pre><pre id="code0" class="unselectable codeClass">		FILE *inFile = NULL;
-</pre><pre id="code0" class="unselectable codeClass">	 
 </pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> 맵 파일 열기 </b></font>
+</pre><pre id="code0" class="unselectable codeClass">		FILE *inFile = NULL;
 </pre><pre id="code0" class="unselectable codeClass">		<font color='red' title="조건식이 참이면 해당 명령문을 실행하는 선택문">if</font> ( ( inFile = fopen( filename, "rt" ) ) == NULL ) {
 </pre><pre id="code0" class="unselectable codeClass">			printf( "[오류] 파일을 열 수 없습니다!" );
 </pre><pre id="code0" class="unselectable codeClass">			return -1;
 </pre><pre id="code0" class="unselectable codeClass">		}
 </pre><pre id="code0" class="unselectable codeClass">	 
 </pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> 맵 파일에서 한 줄씩 읽기 </b></font>
-</pre><pre id="code0" class="unselectable codeClass">		<font color='red' title="초기식, 조건식, 증감식으로 구성된 반복문">for</font>( int row=0; fgets( map[row], 10, inFile ) != NULL; row++ ) {
-</pre><pre id="code0" class="unselectable codeClass">			<font color='red' title="조건식이 참이면 해당 명령문을 실행하는 선택문">if</font> ( map[row][0] == '\n' ) {
+</pre><pre id="code0" class="unselectable codeClass">		<font color='red' title="초기식, 조건식, 증감식으로 구성된 반복문">for</font>( int row=0; fgets( map[row], 100, inFile ) != NULL; row++ ) {
+</pre><pre id="code0" class="unselectable codeClass">			<font color='red' title="조건식이 참이면 해당 명령문을 실행하는 선택문">if</font> ( strlen( map[row] ) < 3 ) {
 </pre><pre id="code0" class="unselectable codeClass">				row--;
 </pre><pre id="code0" class="unselectable codeClass">			}
 </pre><pre id="code0" class="unselectable codeClass">		}
-</pre><pre id="code0" class="unselectable codeClass">	 
-</pre><pre id="code0" class="unselectable codeClass">	<font color="green">//	for( int row=0; map[row][0]!= '\0'; row++ ) {</font>
-</pre><pre id="code0" class="unselectable codeClass">	<font color="green">//		printf("  (%d:%s)  .",row,map[row]);</font>
-</pre><pre id="code0" class="unselectable codeClass">	<font color="green">//	}</font>
-</pre><pre id="code0" class="unselectable codeClass">	<font color="green">//	printf("\n");</font>
 </pre><pre id="code0" class="unselectable codeClass">	 
 </pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> 맵 파일 닫기 </b></font>
 </pre><pre id="code0" class="unselectable codeClass">		fclose( inFile );
@@ -177,7 +171,7 @@ WASD와 [Enter]를 입력하세요:<b><font color='red'>q</font></b>
 </pre><pre id="code0" class="unselectable codeClass">			<font color='red' title="초기식, 조건식, 증감식으로 구성된 반복문">for</font>( int column = 0; map[row][column] != '\0'; column++ ) {
 </pre><pre id="code0" class="unselectable codeClass">				<font color="green">//<b> 첫째 Wall이면 벽 출력 </b></font>
 </pre><pre id="code0" class="unselectable codeClass">				<font color='red' title="조건식이 참이면 해당 명령문을 실행하는 선택문">if</font>( map[row][column] == 'W' )
-</pre><pre id="code0" class="unselectable codeClass">					printf("\033[44m  \033[0m");
+</pre><pre id="code0" class="unselectable codeClass">					printf("\033[44m   \033[0m");
 </pre><pre id="code0" class="unselectable codeClass">				<font color="green">//<b> 둘째 ' '이면 길 출력 </b></font>
 </pre><pre id="code0" class="unselectable codeClass">				<font color='red' title="첫번째 조건식이 거짓이고 이후 조건식이 참이면 해당 명령문을 실행하는 선택문">else if</font>( map[row][column] == ' ' )
 </pre><pre id="code0" class="unselectable codeClass">					printf("  ");
@@ -205,7 +199,7 @@ WASD와 [Enter]를 입력하세요:<b><font color='red'>q</font></b>
 </pre><pre id="code0" class="unselectable codeClass">	<font color="green">// 파일명 : ./Chapter15/CharacterMovement.c</font>
 </pre><pre id="code0" class="unselectable codeClass">	#<font color='red' title="헤더파일(.h) 내용을 소스코드(.c)에 포함하는 명령문">include</font> <<font color='red' title="표준입출력 관련 함수 정보를 가지고 있는 헤더파일">stdio.h</font>>
 </pre><pre id="code0" class="unselectable codeClass">	 
-</pre><pre id="code0" class="unselectable codeClass">	<font color='red' title="다른 파일에 선언된 전역변수에 접근하기 위해 extern을 사용해 한번 더 선언">extern</font> char map[100][100];
+</pre><pre id="code0" class="unselectable codeClass">	<font color='red' title="다른 파일에 선언된 전역변수에 접근하기 위해 사용">extern</font> char map[100][100];
 </pre><pre id="code0" class="unselectable codeClass">	 
 </pre><pre id="code0" class="unselectable codeClass">	<font color="green">//<b> 맵 이동 함수 </b></font>
 </pre>
