--- a/Cg5i5.html
+++ b/Cg5i5.html
@@ -24,7 +24,7 @@
 우리반 학생들의 평균 점수는 86.40입니다 
 </pre><br> 	  				<h4>알고리즘</h4> 				<pre style='white-space:normal;'>프로그램 시작 <br>&nbsp; &nbsp;우리반 학생수 및 점수를 입력 <br>&nbsp; &nbsp;&nbsp; &nbsp;학생수만큼 점수 저장 공간을 확보 <br>&nbsp; &nbsp;평균 점수 계산 및 출력 <br>&nbsp; &nbsp;점수 저장 공간을 반납 <br>프로그램 종료 <br></pre> 				 		 				<br><h4>프로그램 코드 <input id='btn' type='button' value='실행순서 및 메모리상태 확인' onclick='sP3f5();'/></h4>  				<div id = "codeBox"><pre id="code0" class="unselectable codeClass">	<font color="green">// 파일명 : ./Chapter15/ClassAverage.c</font>
 </pre><pre id="code0" class="unselectable codeClass">	#include &lt;stdio.h&gt;
-</pre><pre id="code0" class="unselectable codeClass">	#include <a href='../Cf4i/Cf4i0.html#2' target='keyword'><</a><a href='../Cf5i/Cf5i0.html#2' target='keyword'>stdlib.h</a>&gt;
+</pre><pre id="code0" class="unselectable codeClass">	#include &lt;stdlib.h&gt;
 </pre><pre id="code0" class="unselectable codeClass">		 
 </pre><pre id="code0" class="unselectable codeClass">	<font color="green">//<b> 프로그램 시작 </b></font>
 </pre>
