--- a/Cg5i1.html
+++ b/Cg5i1.html
@@ -48,7 +48,7 @@ A양과 B군이 비겼습니다.
 </pre><pre id="code0" class="unselectable codeClass">	<font color="green">//<b> A양이 승리한 경우 확인 함수 </b></font>
 </pre>
 <pre id="codeF2b" class="unselectable codeClass">F2b	Boolean DoesPlayerAWin( RPSGame playerA, RPSGame playerB ) {
-</pre><pre id="code0" class="unselectable codeClass">		return
+</pre><pre id="code0" class="unselectable codeClass">		<a href='../Cg1i/Cg1i0.html' target='keyword'>return</a>
 </pre><pre id="code0" class="unselectable codeClass">			<font color="green">//<b> A양이 가위이고 B군이 보를 낸 경우 </b></font>
 </pre><pre id="code0" class="unselectable codeClass">			( ( ( playerA <a href='../Cf4i/Cf4i0.html#2' target='keyword'>==</a> SCISSOR ) && ( playerB <a href='../Cf4i/Cf4i0.html#2' target='keyword'>==</a> PAPER ) )
 </pre><pre id="code0" class="unselectable codeClass">				<font color="green">//<b> A양이 바위이고 B군이 가위를 낸 경우 </b></font>
@@ -78,19 +78,19 @@ A양과 B군이 비겼습니다.
 </pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> 가위바위보 승패 출력 </b></font>
 </pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> 첫째 A양과 B군이 비김   </b></font>
 </pre>
-<pre id="code6" class="unselectable codeClass">6		if ( playerA == playerB )
+<pre id="code6" class="unselectable codeClass">6		<a href='../Cf6i/Cf6i0.html' target='keyword'>if</a> ( playerA <a href='../Cf4i/Cf4i0.html#2' target='keyword'>==</a> playerB )
 </pre>
 <pre id="code7" class="unselectable codeClass">7			printf( "\nA양과 B군이 비겼습니다.\n" );
 </pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> 둘째 A양이 승리   </b></font>
 </pre>
-<pre id="code8" class="unselectable codeClass">8		else if ( DoesPlayerAWin( playerA, playerB )
+<pre id="code8" class="unselectable codeClass">8		<a href='../Cf6i/Cf6i0.html' target='keyword'>else if</a> ( DoesPlayerAWin( playerA, playerB )
 </pre>
-<pre id="code9" class="unselectable codeClass">9		                                             == TRUE )
+<pre id="code9" class="unselectable codeClass">9		                                             <a href='../Cf4i/Cf4i0.html#2' target='keyword'>==</a> TRUE )
 </pre>
 <pre id="code10" class="unselectable codeClass">10			printf( "\nA양이 이겼습니다.\n" );
 </pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> 셋째 B군이 승리  </b></font>
 </pre>
-<pre id="code11" class="unselectable codeClass">11		else
+<pre id="code11" class="unselectable codeClass">11		<a href='../Cf6i/Cf6i0.html' target='keyword'>else</a>
 </pre>
 <pre id="code12" class="unselectable codeClass">12			printf( "\nB군이 이겼습니다.\n" );
 </pre><pre id="code0" class="unselectable codeClass">	 
